<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <FrameLayout
        android:id="@+id/flayout_main_child_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llayout_main_tabs" >
    </FrameLayout>

    <LinearLayout
        android:id="@id/llayout_main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bar_bg"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/rgroup_main_fragment_tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbtn_main_tab1"
                style="@style/main_fragment_tab_button"
                android:checked="true"
                android:drawableTop="@drawable/bg_tab_vchat"
                android:text="@string/str_tab_vnow" />

            <RadioButton
                android:id="@+id/rbtn_main_tab2"
                style="@style/main_fragment_tab_button"
                android:drawableTop="@drawable/bg_tab_app"
                android:text="@string/str_tab_contacts" />

            <RadioButton
                android:id="@+id/rbtn_main_tab3"
                style="@style/main_fragment_tab_button"
                android:drawableTop="@drawable/bg_tab_talks"
                android:text="@string/str_tab_apps" />

            <RadioButton
                android:id="@+id/rbtn_main_tab4"
                style="@style/main_fragment_tab_button"
                android:drawableTop="@drawable/bg_tab_setting"
                android:text="@string/str_tab_more" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>